LCD-46200 add standard --add-opens